--- a/index.html
+++ b/index.html
@@ -6,10 +6,10 @@
         <meta name="apple-mobile-web-app-capable" content="yes" />
         <meta name="apple-mobile-web-app-status-bar-style" content="black" />
 
-        <!-- shims for backwards compatibility -->
+        <!-- shims for backwards compatibilit>
         <script type="text/javascript" src="http://code.famo.us/lib/functionPrototypeBind.js"></script>
         <script type="text/javascript" src="http://code.famo.us/lib/classList.js"></script>
-        <script type="text/javascript" src="http://code.famo.us/lib/requestAnimationFrame.js"></script>
+        <script type="text/javascript" src="http://code.famo.us/lib/requestAnimationFrame.js"></script-->
 
         <!-- famous -->
         <link rel="stylesheet" type="text/css" href="http://code.famo.us/famous/0.3/famous.css" />
